# MeiliES

./: .azure-ci.yaml  .gitignore  Cargo.toml  Dockerfile  README.md
meilies/: Cargo.toml
meilies-async-cli/: Cargo.toml
meilies-async-cli/src/: main.rs
meilies-cli/: Cargo.toml
meilies-cli/src/: main.rs
meilies-client/: Cargo.toml
meilies-client/src/: backoff.rs  lib.rs  main.rs  paired.rs  steel_connection.rs  sub.rs
meilies-inspect/: Cargo.toml
meilies-inspect/src/: main.rs
meilies-server/: Cargo.toml  meilies-server.service
meilies-server/src/: event_id.rs  lib.rs  main.rs
meilies-transhumance/: Cargo.toml
meilies-transhumance/src/: main.rs
meilies/src/: codec.rs  command.rs  from_resp.rs  lib.rs  request.rs  response.rs  stream.rs
meilies/src/reqresp/: codec.rs  mod.rs  request.rs  response.rs
meilies/src/resp/: codec.rs  from_resp.rs  mod.rs  resp_value.rs
meilies/src/stream/: event_data.rs  event_name.rs  event_number.rs  message.rs  mod.rs  raw_event.rs  snapshot_ref.rs  stream.rs  stream_name.rs
