[package]
name = "meilies-client"
description = "A TCP client for MeiliES"
license = "MIT"
documentation = "https://docs.rs/meilies-client"
repository = "https://github.com/meilisearch/MeiliES"
version = "0.1.1"
authors = ["Kerollmops <renault.cle@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.26"
log = "0.4.6"
meilies = { version = "0.1", path = "../meilies" }
tokio = "0.1.19"
tokio-retry = "0.2.0"
