[package]
name = "meilies-client"
description = "A TCP client for MeiliES"
license = "MIT"
documentation = "https://docs.rs/meilies-client"
repository = "https://github.com/meilisearch/MeiliES"
version = "0.2.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "0.99.5"
bytes = "0.4.12"
futures-preview = "0.3.0-alpha.18"
futures-timer = "0.4.0"
log = "0.4.6"
meilies = { version = "0.2.0", path = "../meilies" }

[dependencies.futures_codec]
git = "https://github.com/matthunz/futures-codec.git"
rev = "5f492b7"
