[package]
name = "meilies-inspect"
version = "0.1.0"
authors = ["Clément Renault <renault.cle@gmail.com>"]
edition = "2018"

[dependencies]
futures-preview = "0.3.0-alpha.18"
meilies = { version = "0.2.0", path = "../meilies" }
meilies-client = { version = "0.2.0", path = "../meilies-client" }
structopt = { version = "0.2.15", default-features = false }
