[package]
name = "meilies-server"
version = "0.2.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.6.1"
futures = "0.1.26"
log = "0.4.6"
meilies = { version = "0.2.0", path = "../meilies" }
sentry = { version = "0.15.4", optional = true }
sled = { version = "0.23.0", features = ["compression"] }
structopt = { version = "0.2.15", default-features = false }
tokio = "0.1.19"
vigil = { version = "1.1.1", package = "vigil-reporter", optional = true }
