[package]
name = "meilies-server"
version = "0.2.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
futures = "0.1.26"
log = "0.4.6"
meilies = { version = "0.2.0", path = "../meilies" }
sentry = { version = "0.17.0", optional = true }
sled = { version = "0.29.1", features = ["compression"] }
structopt = { version = "0.3.3", default-features = false }
tokio = "0.1.19"
vigil = { version = "1.1.1", package = "vigil-reporter", optional = true }
