[package]
name = "meilies-transhumance"
version = "0.2.0"
authors = ["Clément Renault <renault.cle@gmail.com>"]
edition = "2018"

[dependencies]
futures-preview = "0.3.0-alpha.18"
log = "0.4.6"
meilies = { version = "0.2.0", path = "../meilies" }
meilies-client = { version = "0.2.0", path = "../meilies-client" }
stderrlog = "0.4.1"
structopt = { version = "0.2.15", default-features = false }
