[package]
name = "meilies"
description = "The RESP and MeiliES protocol types"
license = "MIT"
documentation = "https://docs.rs/meilies"
repository = "https://github.com/meilisearch/MeiliES"
version = "0.1.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4.11"
subslice = "0.2.2"
tokio = "0.1.16"
